--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <title>Website</title>
         <meta 
             name="description"
-            content="But I must explain to you how all this mistaken idea of 
-            denouncing pleasure and praising pain was born and I will give you"
+            content="But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you"
         >
     </head>
+
+    <body>
+        <h1>Hello World!</h1>
+    </body>
 </html>
