--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
             name="description"
             content="But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you"
         >
+        <meta property="og:title" content="The Rock">
+        <meta property="og:type" content="video.movie">
+        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/">
+        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg">
     </head>
 
     <body>
