--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Website</title>
         <meta 
-            name="description"
+            property="og:description"
             content="But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you"
         >
-        <meta property="og:title" content="The Rock">
-        <meta property="og:type" content="video.movie">
-        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/">
-        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg">
+        <meta 
+            property="og:image"
+            content="https://developer.mozilla.org/mdn-social-share.png"
+        >
+<meta property="og:title" content="Mozilla Developer Network" />
+
     </head>
 
     <body>
