--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta
+            name="description"
+            content="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium"
+        >
         <title>Website</title>
+        <meta property="og:title" content="Property meta tag title test">
+        <meta property="og:url" content="https://github.com/altichuyko">
+        <meta 
+            property="of:image"
+            content="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"
+        >
         <meta 
             property="og:description"
-            content="But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you"
+            content="abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV"
         >
-        <meta 
-            property="og:image"
-            content="https://developer.mozilla.org/mdn-social-share.png"
-        >
-<meta property="og:title" content="Mozilla Developer Network" />
-
     </head>
-
     <body>
         <h1>Hello World!</h1>
     </body>
