--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         >
         <title>Website</title>
         <meta property="og:title" content="Property meta tag title test">
-        <meta property="og:url" content="https://github.com/altichuyko">
+        <meta property="og:url" content="https://altichuyko.github.io/">
         <meta 
             property="of:image"
-            content="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"
+            content="images/github-logo.png"
         >
         <meta 
             property="og:description"
