--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <meta property="og:title" content="Property meta tag title test">
         <meta property="og:url" content="https://altichuyko.github.io/">
         <meta 
-            property="of:image"
-            content="images/github-logo.png"
+            property="og:image"
+            content="images\github-logo.png"
         >
         <meta 
             property="og:description"
