--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:url" content="https://altichuyko.github.io/">
         <meta 
             property="og:image"
-            content="images\github-logo.png"
+            content="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"
         >
         <meta 
             property="og:description"
