--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
         >
         <title>Website</title>
         <meta property="og:title" content="Property meta tag title test">
+        <meta propety="og:site_name" content="Website for guys">
         <meta property="og:url" content="https://altichuyko.github.io/">
+        <meta property="og:type" content="website">
         <meta 
             property="og:image"
             content="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"
         >
+        <meta property="og:image:width" content="1080">
+        <meta property="og:image:height" content="1080">
+        <meta property="og:image:type" content="image/png">
         <meta 
             property="og:description"
             content="abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV"
